[package]
name = "slados"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
tokio = { version = "1.11.0", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
toml = "0.5.8"
lazy_static = "1.4.0"
socket2 = "0.3.4"
rand = "0.8.4"
uuid = { version = "0.8", features = ["serde", "v4"] }

